# poke-paster

./: .gitignore  Cargo.toml  ids
.github/workflows/: poster.yaml  scrape.yaml
poster/: Cargo.toml
poster/assets/pokemon/: brute  calyrex  flutter  gigantamax  great  mime  mr.  palafin  roaring  sandy  scream  slither  tapu  urshifu
poster/src/: main.rs
scraper/: Cargo.toml
scraper/src/: main.rs
src/: main.rs
