[package]
name = "poke-paster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex-lite = "0.1.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
tl = "0.7.7"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }
