[package]
name = "poster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
rand = "0.8.5"
regex-lite = "0.1.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
